fixed boat cutting out of screen

--- a/src/components/parallax/parallax.css
+++ b/src/components/parallax/parallax.css
@@ -48,13 +48,21 @@
 
 /* Images */
 
-.parallax-content img{
+.sun, .cloud1, .cloud2, .cloud3, .cloud4, .cloud5, .island, .background, .deer{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.boat{
+    position: absolute;
+    top: 55%;
+    left: 90%;
+    width: 150px;
+
 }
 
 
